# lvlm_hallucination

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.experiment  Dockerfile.vlm_large  Makefile  PAPER.md  README.md  README_vlm_large.md  analyze_attention.py  analyze_color_noise.py  analyze_color_noise_2.py  analyze_colored_mnist.py  analyze_decoding_attention.py  analyze_followup2.py  colorize_with_sam.py  evaluate.py  evaluation_metrics_appendix.tex  evaluation_metrics_body.tex  experiment.sh  experiments.tex  inference_and_save.py  method.md  paper.tex  permutation_matching.py  real_exp.md  references.bib  related_work.tex  related_work_modality_gap.md  replot_results.py  requirements-server.txt  requirements.txt  run_aux_alignment_infonce_lowlam.sh  run_aux_alignment_real.sh  run_aux_alignment_real_remaining.sh  run_aux_alignment_synthetic.sh  run_aux_alignment_synthetic_lambda.sh  run_basic_chain.sh  run_dead_rescue_compare.sh  (+46 more)
clean/: .dockerignore  Dockerfile  README.md  pyproject.toml  run.py
clean/configs/: multi_density.yaml
clean/configs/cc3m/: _shared.yaml
clean/configs/models/: clip_b32.yaml  clip_l14.yaml  metaclip_b32.yaml  metaclip_l14.yaml  mobileclip2_b.yaml  mobileclip2_l14.yaml  openclip_b32.yaml  openclip_l14.yaml  siglip2_base.yaml  siglip2_large.yaml
clean/configs/synthetic/: alpha_sweep.yaml  lambda_sweep.yaml
clean/docker/: entrypoint.sh
clean/src/alignment/: __init__.py  (+2 more)
clean/tests/: test_cache_io.py  test_config_resolution.py  test_encoder_dim.py  test_hungarian_perm.py  test_pipeline_smoke.py  test_topk_sae_shapes.py
(+404 files in other folders)
